--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "author": "Holmesen",
   "license": "ISC",
-  "dependencies": {
-    "mysql": "^2.17.1",
-    "puppeteer": "^2.0.0",
-    "request": "^2.88.0"
+  "devDependencies": {
+    "mysql": "^2.18.1",
+    "puppeteer": "^21.0.3",
+    "request": "^2.88.2"
   }
 }
